# poly-market-arb-bot

./: .env.example  .gitignore  Makefile  README.md  RESEARCH_RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
dashboard/: app.py
deploy/: ubuntu-setup.md
deploy/systemd/: poly-market-arb-bot.service  poly-market-arb-dashboard.service
scripts/: inspect_events.py  inspect_market_ws.py  inspect_markets.py  inspect_rewards.py  inspect_slug.py  paper_run.py  runner.py
src/analysis/: arbitrage_analyzer.py  slippage_estimator.py
src/clients/: base.py  polymarket_client.py
src/config/: settings.py
src/execution/: executor.py  settlement.py
src/markets/: market_filter.py  market_parser.py  reward_market_selector.py  updown_discovery.py  updown_parser.py
src/storage/: db.py  schema.sql
src/strategy/: market_maker.py  market_maker_ws.py  pair_market_maker.py  preorder.py  reward_market_maker.py  ws_signal.py
src/utils/: logger.py  retry.py
tests/: test_arbitrage_analyzer.py  test_executor_paper.py  test_market_maker.py  test_market_parser.py  test_pair_market_maker.py  test_preorder.py  test_runner_pair_mm.py  test_settlement.py  test_updown_parser.py  test_ws_signal.py
